# clusterize

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.frag  README.md  clusterize.c  config.m4  config.w32  kmeans.c  kmeans.h  php_clusterize.c  php_clusterize.h  points.c  points.h  test.php
.appveyor/: build_task.cmd  install.cmd
tests/: baddata-003.phpt  reallife-002.phpt  simplecluster-001.phpt  strange-bug-005.phpt  zeros-004.phpt
